# heimdallr-client

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yml
heimdallr_client/: __main__.py  heimdallr_client.py  idblib.py
macos-stub/: Info.plist  README.md  heimdallrd.scpt
universal-stub/: .gitignore  README.md  forge.config.js  package-lock.json  package.json
universal-stub/src/: index.js
